Add Hello World

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-      <h1> Titulo do meu primeiro HTML de teste </h1>
-
-
+      <h1> Titulo do meu primeiro HTML de teste - Hello World</h1>
   </body>
 </html>
